--- a/webapp/view/DisplayEdit.fragment.xml
+++ b/webapp/view/DisplayEdit.fragment.xml
@@ -4,6 +4,7 @@
 	xmlns:smartForm="sap.ui.comp.smartform" xmlns:smartField="sap.ui.comp.smartfield"
 	xmlns:footerbar="sap.ushell.ui.footerbar" xmlns:semantic="sap.f.semantic"
 	xmlns:commons="sap.suite.ui.commons"
+	xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
 	xmlns:f="sap.ui.layout.form" xmlns:core="sap.ui.core"
 	xmlns:mvc="sap.ui.core.mvc" xmlns:uxap="sap.uxap">
    
@@ -96,7 +97,7 @@
 										<smartField:SmartField value="{Reqid}"/>
 									</smartForm:GroupElement> -->
 									<smartForm:GroupElement>
-										<smartField:SmartField id="idBegda" value="{Begda}" />
+										<smartField:SmartField id="idBegda" value="{Begda}" change="dateChange"/>
 									</smartForm:GroupElement>
 									
 									<smartForm:GroupElement>
@@ -112,7 +113,7 @@
 								</smartForm:Group>
 								<smartForm:Group>
 									<smartForm:GroupElement>
-										<smartField:SmartField id="idEndda" value="{Endda}"/>
+										<smartField:SmartField id="idEndda" value="{Endda}" change="dateChange"/>
 									</smartForm:GroupElement>
 									
 									<smartForm:GroupElement>
@@ -132,9 +133,12 @@
 									<!--</smartForm:GroupElement>-->
 								</smartForm:Group>
 								<smartForm:Group>
-									
+									<smartForm:GroupElement>
+										<!--<Text id="idNumberOfDays"/>-->
+										<smartField:SmartField value="{NumberOfDays}" visible="{= !${viewModel>/editable} }"/>
+									</smartForm:GroupElement>
 									<smartForm:GroupElement visible="{= ${viewModel>/editable} }">
-										<smartField:SmartField value="{Inksa}" />
+										<smartField:SmartField id="idInksa" value="{Inksa}" />
 									</smartForm:GroupElement>
 									<smartForm:GroupElement visible="{= !${viewModel>/editable} }">
 										<smartField:SmartField value="{Inksatx}" />
@@ -145,10 +149,28 @@
 									</smartForm:GroupElement>
 									
 									<smartForm:GroupElement>
-										<smartField:SmartField value="{Land1}" visible="{= ${Inksa} === 'X' }" change="onCountryChange"/>
+										<smartField:SmartField value="{Land1}" visible="{= ${Inksa} === 'X' }"/>
 									</smartForm:GroupElement>
 									
 								</smartForm:Group>
+								<smartForm:Group title="Mandate Reason">
+								<!--<smartForm:Group >-->
+									<smartForm:GroupElement>
+										<!--<smartField:SmartField id="idReason" value="{Reason}" -->
+										<!--	editable="{= ${Status} === 'NEW' &amp;&amp; ${viewModel>/editable} &amp;&amp; ${WorkItemFlag} !== 'X' }"-->
+										<!--	app:multiLineSettings="{width: '100%', cols: 50, rows: 4, showExceededText: true, maxLength: 250}" />-->
+										
+										
+										<TextArea id="idReason" value="{Reason}" placeholder="Mandate Reason" 
+											editable="{= ${Status} === 'NEW' &amp;&amp; ${viewModel>/editable} &amp;&amp; ${WorkItemFlag} !== 'X' }"
+											growing="true" growingMaxLines="7" width="100%"/>
+									</smartForm:GroupElement>
+									
+								</smartForm:Group>
+								<!--<smartForm:GroupElement>-->
+								<!--		<smartField:SmartField value="{Reason}" />-->
+								<!--	</smartForm:GroupElement>-->
+								<!--</smartForm:Group>-->
 								<!-- <smartForm:GroupElement>
 										<smartField:SmartField value="{Changedat}"/>
 									</smartForm:GroupElement>
@@ -185,6 +207,9 @@
 									</smartForm:GroupElement>
 									<smartForm:GroupElement>
 										<smartField:SmartField  value="{Qrbda}" editable="{viewModel>/editable}"/>
+									</smartForm:GroupElement>
+									<smartForm:GroupElement>
+										<smartField:SmartField  value="{QararDate}" editable="{viewModel>/editable}"/>
 									</smartForm:GroupElement>
 								</smartForm:Group>
 							</smartForm:SmartForm>
@@ -310,6 +335,7 @@
 					visible="{= !${viewModel>/editable} &amp;&amp; ${Status} === 'NEW' }" press=".onSubmit" icon="sap-icon://complete" type="Accept"/>
 				
 				<!--<Button id="submitButton" text="{i18n>Submit}" press=".onSubmit" icon="sap-icon://complete" type="Accept"/>-->
+				<Button id="printButton" text="{i18n>Print}" press=".onPrint" icon="sap-icon://print" type="Transparent"/>
 					
 			</OverflowToolbar>
 		</uxap:footer>
