--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -17,8 +17,13 @@
 				
 				<smartFilterBar:controlConfiguration>
 					<smartFilterBar:ControlConfiguration id="Reqid" key="Reqid" visibleInAdvancedArea="true"/>
+					<smartFilterBar:ControlConfiguration id="Pernr" key="Pernr" visibleInAdvancedArea="true"/>
 					<smartFilterBar:ControlConfiguration id="Status" key="Status" visibleInAdvancedArea="true"/>
 					<smartFilterBar:ControlConfiguration id="Land1" key="Land1" visibleInAdvancedArea="true"/>
+					<smartFilterBar:ControlConfiguration id="Qrbda" key="Qrbda" visibleInAdvancedArea="true"/>
+					<smartFilterBar:ControlConfiguration id="Begda" key="Begda" visibleInAdvancedArea="true"/>
+					<smartFilterBar:ControlConfiguration id="Endda" key="Endda" visibleInAdvancedArea="true"/>
+					
 					<!--<smartFilterBar:ControlConfiguration id="Mists" key="Mists" visibleInAdvancedArea="true"/>-->
 					
 					<!--<smartFilterBar:ControlConfiguration id="Status" key="Status" visibleInAdvancedArea="true">-->
@@ -45,7 +50,7 @@
 				useExportToExcel="true" beforeExport="onBeforeExport" useTablePersonalisation="true"
 				header="Requests" showRowCount="true" persistencyKey="SmartTableAnalytical_Explored" enableAutoBinding="true" 
 				class="sapUiResponsiveContentPadding" editTogglable="false" app:useSmartToggle="true"
-				showFullScreenButton="true" showDetailsButton="true" initiallyVisibleFields="Reqid,Status,Begda,Endda,Rsntx,Landx">
+				showFullScreenButton="true" showDetailsButton="true" initiallyVisibleFields="Reqid,Qcnum,Status,Begda,Endda,Rsntx,Landx">
 				
 				<Table mode="SingleSelectMaster" selectionChange=".onSelectionChange"></Table>
 				
