--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -12,12 +12,19 @@
 		
 		<!--<semantic:titleContent>-->
 		<semantic:headerContent>
-			<smartFilterBar:SmartFilterBar id="smartFilterBar" entitySet="ZI_MANDREQ_HDR" persistencyKey="SmartFilter_Explored"
+			<smartFilterBar:SmartFilterBar id="smartFilterBar" entitySet="ZI_MANDREQ_HDR" persistencyKey="SmartFilter_Explored" search="onSearch"
 				basicSearchFieldName="Status" enableBasicSearch="false" >
 				
 				<smartFilterBar:controlConfiguration>
 					<smartFilterBar:ControlConfiguration id="Reqid" key="Reqid" visibleInAdvancedArea="true"/>
-					<smartFilterBar:ControlConfiguration id="Pernr" key="Pernr" visibleInAdvancedArea="true"/>
+					
+					<smartFilterBar:ControlConfiguration id="Pernr" key="Pernr" visibleInAdvancedArea="true">
+						<!--<smartFilterBar:defaultFilterValues>-->
+	     <!--                       <smartFilterBar:SelectOption low="00000000">-->
+	     <!--                       </smartFilterBar:SelectOption>-->
+	     <!--                </smartFilterBar:defaultFilterValues>-->
+                     </smartFilterBar:ControlConfiguration>
+                     
 					<smartFilterBar:ControlConfiguration id="Status" key="Status" visibleInAdvancedArea="true"/>
 					<smartFilterBar:ControlConfiguration id="Land1" key="Land1" visibleInAdvancedArea="true"/>
 					<smartFilterBar:ControlConfiguration id="Qrbda" key="Qrbda" visibleInAdvancedArea="true"/>
